# ccpm

./: .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.in  Makefile  README.md  SECURITY.md  find_emojis.py  installer.sh  pyproject.toml  setup.py
.claude/: settings.local.json
.claude/commands/pm/: epic-sync.md  issue-edit.md  issue-start.md
.claude/rules/: github-operations.md  path-standards.md  path-standards.md.backup
.claude/scripts/: check-path-standards.sh  fix-path-standards.sh  path-tools-README.md  test-and-log.sh  utils.sh  validate-pm-scripts.sh
.claude/scripts/pm/: blocked.sh  epic-list.sh  epic-show.sh  epic-status.sh  help.sh  in-progress.sh  init.sh  next.sh  prd-list.sh  search.sh  (+4 more)
.github/: README.md  SETUP_GUIDE.md
.github/workflows/: ci.yml  release-test.yml  status-check.yml  test.yml
ccpm/: __init__.py  __main__.py  cli.py
ccpm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ccpm/claude_template/: settings.local.json
ccpm/commands/: __init__.py  maintenance.py  pm.py  setup.py
ccpm/core/: __init__.py  config.py  github.py  installer.py  merger.py
ccpm/utils/: __init__.py  backup.py  claude.py  console.py  emoji_map.py  shell.py
install/: README.md  ccpm.sh
tests/: conftest.py
tests/integration/: test_commands.py  test_cross_platform.py  test_data_safety.py  test_documentation_quality.py  test_exception_handling.py  test_github.py  test_gitignore.py  test_non_interactive.py  test_packaging.py  test_permission_compliance.py  test_pm_shell_scripts.py  test_security_validation.py  test_setup.py  test_shell_utils.py
(+21 files in other folders)
